cargo-features = ['edition']

[package]
name = "pastebin-actix"
edition = '2018'
version = "0.1.0"
authors = ["zero.qn"]

[dependencies]
diesel = { version = "1.2.0", features = ["postgres", "r2d2"] }
dotenv = "0.11.0"
actix = "0.7"
actix-web = "0.7"
futures = "0.1"
lazy_static = "1.0.0"
serde_json = "1.0.0"
serde = "1.0.0"
serde_derive = "1.0.0"
failure = "0.1.2"
failure_derive = "0.1.2"
r2d2 = "0.8.2"
toml = "0.4.6"
